Small fix for footer text alignment

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,6 +1,9 @@
+.site-footer {
+  text-align: center;
+}
+
 .footer-nav {
   padding: 1em;
-  text-align: center;
 }
 
 .footer-nav-item {
